[package]
name = "elven-tools-sft-minter-sc-wasm"
version = "0.1.0"
authors = ["Julian Ćwirko <julian.cwirko@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elven-tools-sft-minter-sc]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.6"

[workspace]
members = ["."]
