[package]
name = "elven-tools-sft-minter-wasm"
version = "0.3.0"
authors = ["Julian Ćwirko <julian.cwirko@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elven-tools-sft-minter]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.42.0"

[workspace]
members = ["."]
